fix: update destructive color scheme values on dark mode for better accessability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,8 +62,8 @@ html > body[data-scroll-locked] {
     --muted-foreground: 240 5% 64.9%;
     --accent: 240 3.7% 15.9%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 0 62% 30%;
-    --destructive-foreground: 0 0% 85%;
+    --destructive: 2 100% 57%;
+    --destructive-foreground: 0 0% 100%;
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
